# rti_boilerplate

./: .gitignore  CMakeLists.txt  README.md  cleangen  gencode  x
cmake/: FindRTI.cmake
idl/: Sensors.h  Sensors.idl  Sensors_publisher.cxx  Sensors_subscriber.cxx  Template.idl
lib/boilerplate/: Boilerplate.cpp  Boilerplate.h
lib/boilerplate/Sensors/: CMakeLists.txt  Sensors.cxx  SensorsBoilerplate.cpp  SensorsBoilerplate.h  SensorsPlugin.h  SensorsSupport.cxx  SensorsSupport.h  Sensors_publisher.cxx  USER_QOS_PROFILES.xml  makefile_Sensors_x64Linux3gcc4.8.2
lib/boilerplate/Template/: Template.cxx  Template.h  TemplateBoilerplate.cpp  TemplateBoilerplate.h  TemplatePlugin.cxx  TemplatePlugin.h  TemplateSupport.cxx  TemplateSupport.h  Template_publisher.cxx  Template_subscriber.cxx  USER_QOS_PROFILES.xml  makefile_Template_x64Linux3gcc4.8.2
lib/boilerplate/boilerplate/: Boilerplate.cpp  Boilerplate.h
lib/boilerplate/boilertemplate/: CMakeLists.txt  TemplateBoilerplate.cpp  TemplateBoilerplate.h
lib/test/: test.cpp  test.h
src/: main.cpp  minimal_publisher.cpp  minimal_subscriber.cpp  twin.cpp
